grammar and google seach improvement

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: ""
 
 # LANDING PAGE
 # username: This will displayed on the landing page as your name.
-username: Henri
+username: Henri Klein
 # typing_text: This will be typed before 'scroll down for more'.
 # > set this to your job title, e.g. Fullstack Developer
 typing_text: Student that loves to code
