--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -59,7 +59,7 @@
 
 - title: Kaiserin-Friedrich-Gymnasium
   title-url: https://Kaiserin-Friedrich.de/
-  date: Sep 2014 - 2019
+  date: Sep 2014 - August 2019
   subtitle: Graduaded till greade 9
   tags:
     - tag: joining tech-club
