--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -39,7 +39,7 @@
 - title:  theSourceCode.tech
   title-url: https://thesourcecode.tech/
   date: Januar 2020
-  subtitle: meachendice for developers and missfits
+  subtitle: merchandizing shop for developers and misfits
   tags:
     - tag: Illustraitor
     - tag: E-commerce
