--- a/_data/skills-languages.yml
+++ b/_data/skills-languages.yml
@@ -5,14 +5,11 @@
 # - name: Language
 #   weight: 5
 
-- name: Dart
+- name: .Dart
   weight: 5
 
 - name: Python
   weight: 3
-
-- name: Java
-  weight: 1
 
 - name: CSS
   weight: 2
@@ -21,7 +18,7 @@
   weight: 1
 
 - name: HTML5
-  weight: 4
+  weight: 2
 
 - name: C++
-  weight: 2
+  weight: 1
